--- a/etc/system/local/outputs.conf
+++ b/etc/system/local/outputs.conf
@@ -1,18 +1,16 @@
-[indexAndForward]
-index = false
-
-[indexer_discovery:cluster1]
-pass4SymmKey = badpassword
-master_uri = https://localhost:8089
-
-[tcpout]
-defaultGroup = LB_indexers
-forwardedindex.filter.disable = true
-indexAndForward = false
-
-[tcpout:LB_indexers]
-disabled = false
-autoLBFrequency = 40
-autoLB = true
-indexerDiscovery = cluster1
+# Indexers - Don't output to the cluster?
+#[indexer_discovery:cluster1]
+#pass4SymmKey = badpassword
+#master_uri = https://10.44.0.10:8089
+#
+#[tcpout]
+#defaultGroup = LB_indexers
+#forwardedindex.filter.disable = true
+#indexAndForward = false
+#
+#[tcpout:LB_indexers]
+#disabled = false
+#autoLBFrequency = 40
+#autoLB = true
+#indexerDiscovery = cluster1
 
