--- a/etc/system/local/server.conf
+++ b/etc/system/local/server.conf
@@ -25,12 +25,7 @@ stack_id = free
 
 [clustering]
 cluster_label = cluster1
-mode = master
+mode = slave
+master_uri = https://10.44.0.10:8089
 pass4SymmKey = badpassword
 replication_factor = 2
-
-[indexer_discovery]
-pass4SymmKey = badpassword
-polling_rate = 10
-indexerWeightByDiskCapacity = false
-
